tests/baselines/reference/accessorsOverrideProperty6.errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/accessorsOverrideProperty6.ts(5,9): error TS2611: 'p' is defined as a property in class 'A', but is overridden here in 'B' as an accessor.
tests/cases/conformance/classes/propertyMemberDeclarations/accessorsOverrideProperty6.ts(12,9): error TS2611: 'p' is defined as a property in class 'C', but is overridden here in 'D' as an accessor.


==== tests/cases/conformance/classes/propertyMemberDeclarations/accessorsOverrideProperty6.ts (2 errors) ====
    class A {
        p = 'yep'
    }
    class B extends A {
        get p() { return 'oh no' } // error
            ~
!!! error TS2611: 'p' is defined as a property in class 'A', but is overridden here in 'B' as an accessor.
    }
    class C {
       p = 101
    }
    class D extends C {
         _secret = 11
        get p() { return this._secret } // error
            ~
!!! error TS2611: 'p' is defined as a property in class 'C', but is overridden here in 'D' as an accessor.
        set p(value) { this._secret = value } // error
    }
    